--- a/Application/index.html
+++ b/Application/index.html
@@ -10,6 +10,7 @@
     <meta property='og:description' content='This is the EXT page'/>
     <meta property='og:url' content='//www.example.com/URL of the article'/>
     <title>Application</title>
+    <meta name="google-site-verification" content="DMdYPtIdXUDBaZDCoSJkp5NYFkCM3XzQ6A5clI74tl0" />
     <noscript>
         <meta http-equiv="refresh" content="0;url=noscript.html">
     </noscript>
