--- a/Application/noscript.html
+++ b/Application/noscript.html
@@ -6,6 +6,7 @@
     <meta property='og:image' content='//media.example.com/ 1234567.jpg'/>
     <meta property='og:description' content='This is the static page'/>
     <meta property='og:url' content='//www.example.com/URL of the article'/>
+    <meta name="google-site-verification" content="DMdYPtIdXUDBaZDCoSJkp5NYFkCM3XzQ6A5clI74tl0" />
     <title>DemoGV</title>
     <title>Title</title>
 </head>
